--- a/app/src/main/res/layout/activity_edit_comment_page.xml
+++ b/app/src/main/res/layout/activity_edit_comment_page.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp"
-    >
+    tools:context=".pages.EditCommentPage">
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/nameTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/edit_comment"
+            android:textColor="@color/primaryColor"
+            android:textSize="20sp" />
+
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -55,53 +73,23 @@
         android:layout_marginStart="50dp"
         android:gravity="start"
         android:orientation="vertical"
-        android:paddingStart="10dp"
-        >
+        android:paddingStart="20dp">
 
-        <TextView
-            android:id="@+id/replyBodyTV"
+        <EditText
+            android:id="@+id/commentBodyTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/lorem" />
 
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="5dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/edit"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/likeReplyBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_favorite_border_24" />
-
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="match_parent" />
-
-            <ImageView
-                android:id="@+id/dislikeReplyBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_outline_thumb_down_24" />
-
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="5dp" />
-
+            android:text="@string/edit"
+            />
 
     </LinearLayout>
+
+
 
 </LinearLayout>
