--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="48dp"
-                android:text="Already Have an Account?"
+                android:text="@string/already_have_an_account"
                 android:textColor="@android:color/white"
                 android:textSize="28sp"
                 android:textStyle="bold"
@@ -107,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="3dp"
                 android:paddingBottom="3dp"
-                android:text="Forgot Password?"
+                android:text="@string/forgot_password"
                 android:textColor="@color/primaryColor"
                 android:textStyle="bold" />
 
@@ -122,7 +122,7 @@
                 android:background="@drawable/custom_button"
                 android:includeFontPadding="false"
                 android:minHeight="48dp"
-                android:text="Log in"
+                android:text="@string/log_in"
                 android:textAllCaps="false"
                 android:textSize="15sp" />
 
@@ -134,7 +134,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Or"
+                android:text="@string/or"
                 android:textColor="@color/primaryColor" />
 
             <Space
@@ -150,7 +150,7 @@
                 android:backgroundTint="@color/primaryTextColor"
                 android:minHeight="48dp"
                 android:drawableLeft="@drawable/googleg_standard_color_18"
-                android:text="Continue with google"
+                android:text="@string/continue_with_google"
                 android:textAllCaps="false"
                 android:textSize="15sp" />
 
