--- a/app/src/main/res/layout/activity_post_comment_page.xml
+++ b/app/src/main/res/layout/activity_post_comment_page.xml
@@ -62,6 +62,10 @@
                         android:layout_height="wrap_content"
                         android:text="@string/replying_to" />
 
+                    <Space
+                        android:layout_width="5dp"
+                        android:layout_height="match_parent"/>
+
                     <TextView
                         android:id="@+id/usernameReplyToTV"
                         android:layout_width="wrap_content"
@@ -97,7 +101,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Comment as" />
+                        android:text="@string/comment_as" />
+
+                    <Space
+                        android:layout_width="5dp"
+                        android:layout_height="match_parent"/>
 
                     <TextView
                         android:id="@+id/currentUserUsername"
