--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -93,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Username"
+                android:hint="@string/username"
                 android:inputType="none"
                 android:minHeight="50dp"
                 android:textSize="15sp" />
@@ -151,7 +151,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Or"
+                android:text="@string/or"
                 android:textColor="@color/primaryColor" />
 
             <Space
@@ -167,7 +167,7 @@
                 android:backgroundTint="@color/primaryTextColor"
                 android:minHeight="48dp"
                 android:drawableLeft="@drawable/googleg_standard_color_18"
-                android:text="Continue with google"
+                android:text="@string/continue_with_google"
                 android:textAllCaps="false"
                 android:textSize="15sp" />
 
