--- a/app/src/main/res/layout/activity_thread_detail_page.xml
+++ b/app/src/main/res/layout/activity_thread_detail_page.xml
@@ -23,7 +23,7 @@
             android:orientation="horizontal"
             android:gravity="center">
 
-            <io.getstream.avatarview.AvatarView
+            <ImageView
                 android:id="@+id/avUser"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -67,37 +67,6 @@
             android:layout_height="wrap_content"
             android:text="@string/lorem"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <ImageButton
-                android:id="@+id/btnUpvote"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_upvote"/>
-
-            <TextView
-                android:id="@+id/tvTotalVotes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/upvotes" />
-
-            <ImageButton
-                android:id="@+id/btnDownvote"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_downvote"/>
-
-            <ImageButton
-                android:id="@+id/btnComment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_comment" />
-
-        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
@@ -111,7 +80,7 @@
             android:orientation="horizontal"
             android:gravity="center_vertical">
 
-            <io.getstream.avatarview.AvatarView
+            <ImageView
                 android:id="@+id/avCurrUser"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -132,7 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:maxHeight="80dp"
-                android:hint="What's happening?"
+                android:hint="@string/what_s_happening"
                 android:gravity="center_vertical"
                 android:background="@android:color/transparent"
                 android:paddingHorizontal="10dp"
@@ -143,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="Comment"
+                android:text="@string/comment"
                 android:textAllCaps="false" />
         </LinearLayout>
 
