--- a/app/src/main/res/layout/activity_verify_otpforgot_password_page.xml
+++ b/app/src/main/res/layout/activity_verify_otpforgot_password_page.xml
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="48dp"
-                android:text="Input the OTP to Proceed"
+                android:text="@string/input_the_otp_to_proceed"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="28sp"
                 android:textStyle="bold"
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="OTP Verification"
+            android:text="@string/otp_verification"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/primaryColor"
