--- a/app/src/main/res/layout/component_thread.xml
+++ b/app/src/main/res/layout/component_thread.xml
@@ -28,7 +28,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="17.5K"/>
+                android:text="@string/_17_5k"/>
 
             <ImageButton
                 android:layout_width="wrap_content"
