--- a/app/src/main/res/layout/post_comment_card.xml
+++ b/app/src/main/res/layout/post_comment_card.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -43,7 +42,7 @@
                 android:id="@+id/createdDateTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2022-12-03" />
+                android:text="@string/_2022_12_03" />
 
         </LinearLayout>
 
@@ -55,8 +54,7 @@
         android:layout_marginStart="50dp"
         android:gravity="start"
         android:orientation="vertical"
-        android:paddingStart="10dp"
-        >
+        android:paddingStart="10dp">
 
         <TextView
             android:id="@+id/commentBodyTV"
@@ -101,6 +99,30 @@
                 android:layout_height="wrap_content"
                 android:text="@string/reply" />
 
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/edit"
+                android:visibility="gone"
+                />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete"
+                android:visibility="gone"
+                />
+
         </LinearLayout>
 
         <Space
@@ -121,7 +143,7 @@
 
             android:id="@+id/repliesRV"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
