--- a/app/src/main/res/layout/activity_create_thread_page.xml
+++ b/app/src/main/res/layout/activity_create_thread_page.xml
@@ -13,13 +13,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/ic_close" />
+        android:gravity="end">
 
         <Button
             android:id="@+id/btnPost"
@@ -33,10 +27,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <io.getstream.avatarview.AvatarView
+        <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/cat_user"
@@ -60,5 +54,13 @@
             android:gravity="start" />
 
     </LinearLayout>
+
+
+    <ImageView
+        android:id="@+id/postView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginVertical="10dp"
+        />
 
 </LinearLayout>
