--- a/app/src/main/res/layout/card_thread.xml
+++ b/app/src/main/res/layout/card_thread.xml
@@ -1,91 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/cardThread"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardThread"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp"
+    android:layout_marginBottom="10dp"
     android:background="#F5F5F5"
-    android:layout_marginTop="20dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/avUser"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/cat_user"
-                    app:avatarViewBorderColor="@color/primaryContent"
-                    app:avatarViewBorderWidth="3dp"
-                    app:avatarViewIndicatorBorderColor="@color/primaryTextColor"
-                    app:avatarViewIndicatorBorderSizeCriteria="10"
-                    app:avatarViewIndicatorColor="@color/secondaryColor"
-                    app:avatarViewIndicatorEnabled="true"
-                    app:avatarViewIndicatorPosition="bottomRight"
-                    app:avatarViewIndicatorSizeCriteria="9"
-                    app:avatarViewInitialsTextStyle="bold"
-                    app:avatarViewShape="circle" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:gravity="center_vertical">
-
-                    <TextView
-                        android:id="@+id/tvUsername"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/username" />
-
-                    <TextView
-                        android:id="@+id/tvCreatedAt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/created_at"/>
-
-                </LinearLayout>
-
-                <ImageButton
-                    android:id="@+id/btnEdit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_edit_24"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tvThreadBody"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/lorem"/>
-
-        </LinearLayout>
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/avUser"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/cat_user"
+                app:avatarViewBorderColor="@color/primaryContent"
+                app:avatarViewBorderWidth="3dp"
+                app:avatarViewIndicatorBorderColor="@color/primaryTextColor"
+                app:avatarViewIndicatorBorderSizeCriteria="10"
+                app:avatarViewIndicatorColor="@color/secondaryColor"
+                app:avatarViewIndicatorEnabled="true"
+                app:avatarViewIndicatorPosition="bottomRight"
+                app:avatarViewIndicatorSizeCriteria="9"
+                app:avatarViewInitialsTextStyle="bold"
+                app:avatarViewShape="circle" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvUsername"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/username" />
+
+                <TextView
+                    android:id="@+id/tvCreatedAt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/created_at" />
+
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/btnEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_edit_24" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvThreadBody"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/lorem" />
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
+    <ImageView
+        android:id="@+id/thumbnailPost"
+        android:layout_width="139dp"
+        android:layout_height="227dp"
+        tools:layout_editor_absoluteY="1dp"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/btnUpvote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_upvote"/>
+            android:src="@drawable/ic_upvote" />
 
         <TextView
             android:id="@+id/tvTotalVotes"
@@ -97,8 +111,7 @@
             android:id="@+id/btnDownvote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_downvote"/>
+            android:src="@drawable/ic_downvote" />
 
     </LinearLayout>
-
 </LinearLayout>
