--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -1,49 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.NotificationFragment"
-    android:orientation="vertical"
-    android:paddingHorizontal="20dp">
+    >
 
-<!--    <include layout="@layout/section_activity" />-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+
+        >
+
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/nameTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/notifications"
+                android:textColor="@color/primaryColor"
+                android:textSize="20sp" />
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/notificationRV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            />
+
+    </LinearLayout>
+
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/activities_title"
-        android:textSize="20sp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvNotificationActivities"
+        android:id="@+id/noRecentNotificationTV"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingHorizontal="0dp">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_recent_notification">
 
-    </androidx.recyclerview.widget.RecyclerView>
+    </TextView>
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="40dp" />
-
-<!--    <include layout="@layout/section_new_followers" />-->
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/followers_title"
-        android:textSize="20sp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvNotificationFollowers"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingHorizontal="0dp">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-</LinearLayout>
+</RelativeLayout>
