--- a/app/src/main/res/layout/fragment_thread.xml
+++ b/app/src/main/res/layout/fragment_thread.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,14 +7,27 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:background="#E1E1E1"
-    android:paddingHorizontal="20dp"
-    android:paddingVertical="0dp">
+    android:paddingHorizontal="10dp"
+    android:paddingTop="10dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvThread"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
     </androidx.recyclerview.widget.RecyclerView>
 
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/FABCreate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="end|bottom"
+        android:clickable="true"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        android:layout_marginBottom="10dp"
+        />
+
+</RelativeLayout>
