--- a/app/src/main/res/layout/activity_thread_detail_page.xml
+++ b/app/src/main/res/layout/activity_thread_detail_page.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".pages.ThreadDetailPage"
+    android:gravity="start"
     android:orientation="vertical"
-    android:gravity="start" >
+    tools:context=".pages.ThreadDetailPage">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:gravity="start"
+        android:orientation="vertical"
         android:paddingHorizontal="20dp"
         android:paddingTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/avUser"
@@ -39,11 +38,15 @@
                 app:avatarViewInitialsTextStyle="bold"
                 app:avatarViewShape="circle" />
 
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="match_parent" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tvUsername"
@@ -55,30 +58,39 @@
                     android:id="@+id/tvCreatedAt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/created_at"/>
+                    android:text="@string/created_at" />
 
             </LinearLayout>
 
         </LinearLayout>
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
         <TextView
             android:id="@+id/tvThreadBody"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/lorem"/>
+            android:text="@string/lorem" />
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="7dp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            android:layout_marginVertical="4dp"/>
-
+            android:layout_marginVertical="4dp"
+            android:background="@android:color/darker_gray" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="7dp" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/avCurrUser"
@@ -100,12 +112,12 @@
                 android:id="@+id/etCommentBody"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:maxHeight="80dp"
-                android:hint="@string/what_s_happening"
-                android:gravity="center_vertical"
+                android:layout_weight="@integer/material_motion_duration_long_1"
                 android:background="@android:color/transparent"
-                android:paddingHorizontal="10dp"
-                android:layout_weight="@integer/material_motion_duration_long_1"/>
+                android:gravity="center_vertical"
+                android:hint="@string/what_s_happening"
+                android:maxHeight="80dp"
+                android:paddingHorizontal="10dp" />
 
             <Button
                 android:id="@+id/btnPostComment"
@@ -116,13 +128,20 @@
                 android:textAllCaps="false" />
         </LinearLayout>
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="7dp" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="4dp"
+            android:background="@android:color/darker_gray" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="7dp" />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginVertical="4dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvThreadComment"
