--- a/app/src/main/res/layout/card_comment_thread.xml
+++ b/app/src/main/res/layout/card_comment_thread.xml
@@ -27,6 +27,10 @@
             app:avatarViewInitialsTextStyle="bold"
             app:avatarViewShape="circle" />
 
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -66,18 +70,29 @@
 
     </LinearLayout>
 
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="5dp" />
+
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
+        android:layout_marginStart="55dp"
         android:gravity="start"
         android:orientation="vertical">
 
         <TextView
+            android:paddingLeft="5dp"
             android:id="@+id/tvCommentBody"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/lorem" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="5dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
