--- a/app/src/main/res/layout/activity_create_thread_page.xml
+++ b/app/src/main/res/layout/activity_create_thread_page.xml
@@ -31,6 +31,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/avCurrUser"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/cat_user"
